--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -11,6 +11,93 @@ root {
 
 }
 
+/*Custom CSS*/
+.text-right {
+    text-align: right;
+}
+
+.image-show {
+    max-width: 100%;
+    max-height: 100%;
+    height: auto;
+    width: auto;
+    border-radius: 5px !important;
+}
+
+.image-edit-preview {
+    max-width: 100% !important;
+    max-height: 100% !important;
+    height: auto !important;
+    width: 350px !important;
+}
+
+.align-right {
+    flex: auto;
+    align-self: flex-end;
+}
+
+/* :: 3.4.0 Preloader */
+.preloader {
+    background-color: rgb(28, 28, 51);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 99999; }
+.preloader .spinner {
+    width: 100px;
+    text-align: center; }
+.preloader .spinner div {
+    width: 30px;
+    height: 30px;
+    background-color: #fff;
+    border-radius: 100%;
+    display: inline-block;
+    -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+    animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
+.preloader .spinner .bounce1 {
+    -webkit-animation-delay: -0.32s;
+    animation-delay: -0.32s; }
+.preloader .spinner .bounce2 {
+    -webkit-animation-delay: -0.16s;
+    animation-delay: -0.16s; }
+
+@-webkit-keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0); }
+    40% {
+        -webkit-transform: scale(1); } }
+@keyframes sk-bouncedelay {
+    0%,
+    80%,
+    100% {
+        -webkit-transform: scale(0);
+        transform: scale(0); }
+    40% {
+        -webkit-transform: scale(1);
+        transform: scale(1); } }
+
+.fc .fc-daygrid-day.fc-day-today {
+    background-color: #0061c98c !important;
+    /*background-color: var(--fc-today-bg-color, rgba(255, 220, 40, 0.15)) !important;*/
+    border: none !important;
+    border-top: 1px solid #ddd !important;
+    font-weight: bold;
+}
+.fc-toolbar-chunk {
+    display: flex;
+    align-content: center;
+    justify-content: space-around;
+    align-items: center;
+}
+
+/* ---------------------------------- */
+
+
 .cf {
   zoom: 1; }
 
